--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,9 @@ jobs:
 
       - name: Build
         working-directory: .
-        run: ./gradlew build -x test
+        run: |
+        chmod +x gradlew
+        ./gradlew build -x test
 
       - name: Test
         working-directory: .
