--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,16 @@ jobs:
           source: "./"
           target: "~/prod"
 
-
+      - name: Deploy
+        uses: appleboy/ssh-action@master
+        with:
+          HOST: ${{ secrets.HOST }}
+          USERNAME: ${{ secrets.USERNAME }}
+          PORT: ${{ secrets.PORT }}
+          KEY: ${{ secrets.KEY }}
+          script: |
+            cd ~/prod
+            docker-compose down && docker-compose up --build -d 
 
 
 
