--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: self-hosted-rafid
+    runs-on: self-hosted-lab-runner
     steps:
       - uses: rtCamp/action-cleanup@master
       - uses: actions/checkout@v1
@@ -27,35 +27,35 @@ jobs:
         working-directory: .
         run: ./gradlew test
 
-  deploy:
-    needs: build-and-test
-    runs-on: self-hosted-rafid
-    steps:
-      - uses: rtCamp/action-cleanup@master
-      - uses: actions/checkout@master
-
-      - name: Copy repo to VM
-        uses: appleboy/scp-action@master
-        env:
-          HOST: ${{ secrets.HOST }}
-          USERNAME: ${{ secrets.USERNAME }}
-          PORT: ${{ secrets.PORT }}
-          KEY: ${{ secrets.KEY }}
-        with:
-          source: "./"
-          target: "~/prod"
-
-      - name: Deploy
-        uses: appleboy/ssh-action@master
-        with:
-          HOST: ${{ secrets.HOST }}
-          USERNAME: ${{ secrets.USERNAME }}
-          PORT: ${{ secrets.PORT }}
-          KEY: ${{ secrets.KEY }}
-          script: |
-            cd ~/prod
-            docker-compose down && docker-compose up --build -d 
-
-
-
-
+#  deploy:
+#    needs: build-and-test
+#    runs-on: self-hosted-rafid
+#    steps:
+#      - uses: rtCamp/action-cleanup@master
+#      - uses: actions/checkout@master
+#
+#      - name: Copy repo to VM
+#        uses: appleboy/scp-action@master
+#        env:
+#          HOST: ${{ secrets.HOST }}
+#          USERNAME: ${{ secrets.USERNAME }}
+#          PORT: ${{ secrets.PORT }}
+#          KEY: ${{ secrets.KEY }}
+#        with:
+#          source: "./"
+#          target: "~/prod"
+#
+#      - name: Deploy
+#        uses: appleboy/ssh-action@master
+#        with:
+#          HOST: ${{ secrets.HOST }}
+#          USERNAME: ${{ secrets.USERNAME }}
+#          PORT: ${{ secrets.PORT }}
+#          KEY: ${{ secrets.KEY }}
+#          script: |
+#            cd ~/prod
+#            docker-compose down && docker-compose up --build -d
+#
+#
+#
+#
