--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,16 +45,16 @@ jobs:
           source: "./"
           target: "~/prod"
 
-      # - name: Deploy
-      #   uses: appleboy/ssh-action@master
-      #   with:
-      #     HOST: ${{ secrets.HOST }}
-      #     USERNAME: ${{ secrets.USERNAME }}
-      #     PORT: ${{ secrets.PORT }}
-      #     KEY: ${{ secrets.KEY }}
-      #     script: |
-      #       cd ~/prod
-      #       docker-compose down && docker-compose up --build -d
+      - name: Deploy
+        uses: appleboy/ssh-action@master
+        with:
+          HOST: ${{ secrets.HOST }}
+          USERNAME: ${{ secrets.USERNAME }}
+          PORT: ${{ secrets.PORT }}
+          KEY: ${{ secrets.KEY }}
+          script: |
+            cd ~/prod
+            docker-compose down && docker-compose up --build -d
 
 
 
